# netmeter

./: .gitignore  pyproject.toml
src/netmeter/: excel.py  main.py  network.py
tests/: test_isconn.py  test_update.py
