[project]
name = "netmeter"
version = "0.0.1"
description = "Allows you to monitor the availability of your internet connection"
authors = [
    {name = "Yann DEBLY",email = "yann.debly@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "netmeter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
